// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsLabelTagMapping component should render a SettingsLabelTagMapping component with warning 1`] = `
<div>
  <div
    class="miq-custom-tab-content-header"
  >
    <div
      class="tab-content-header-title"
    >
      <h3>
        Map Tags
      </h3>
    </div>
    <div
      class="tab-content-header-actions"
    >
      <button
        class="cds--btn cds--btn--primary"
        title="Click on this row to create a new mapping rule"
        type="button"
      >
        Add Mapping Rule
      </button>
    </div>
  </div>
  <div
    class="miq-custom-tab-content-notification"
  >
    <div
      class="miq-notification-message-container alert alert-warning"
    >
      <span
        class="pficon pficon-warning-triangle-o"
      />
      <strong>
        Caution: Mappings with Resource Entity 'All-Entities' could cause overwriting existing tags on resources with mapped provider labels.
      </strong>
    </div>
  </div>
  <div
    class="miq-data-table settings-label-tag-mappings-list"
  >
    <div
      class="cds--data-table-content"
    >
      <table
        class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
      >
        <thead>
          <tr>
            <th
              aria-sort="none"
              class="miq-data-table-header cds--table-sort__header"
              scope="col"
            >
              <div
                class="cds--table-sort__description"
                id="table-sort-11"
              >
                Click to sort rows by Resource Entity header in ascending order
              </div>
              <button
                aria-describedby="table-sort-11"
                class="miq-data-table-header cds--table-sort"
                type="button"
              >
                <span
                  class="cds--table-sort__flex"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Resource Entity
                  </div>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon-unsorted"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                    />
                    <path
                      d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                    />
                  </svg>
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="miq-data-table-header cds--table-sort__header"
              scope="col"
            >
              <div
                class="cds--table-sort__description"
                id="table-sort-12"
              >
                Click to sort rows by Resource Label header in ascending order
              </div>
              <button
                aria-describedby="table-sort-12"
                class="miq-data-table-header cds--table-sort"
                type="button"
              >
                <span
                  class="cds--table-sort__flex"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Resource Label
                  </div>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon-unsorted"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                    />
                    <path
                      d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                    />
                  </svg>
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="miq-data-table-header cds--table-sort__header"
              scope="col"
            >
              <div
                class="cds--table-sort__description"
                id="table-sort-13"
              >
                Click to sort rows by Tag Category header in ascending order
              </div>
              <button
                aria-describedby="table-sort-13"
                class="miq-data-table-header cds--table-sort"
                type="button"
              >
                <span
                  class="cds--table-sort__flex"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Tag Category
                  </div>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon-unsorted"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                    />
                    <path
                      d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                    />
                  </svg>
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="miq-data-table-header cds--table-sort__header"
              scope="col"
            >
              <div
                class="cds--table-sort__description"
                id="table-sort-14"
              >
                Click to sort rows by Actions header in ascending order
              </div>
              <button
                aria-describedby="table-sort-14"
                class="miq-data-table-header cds--table-sort"
                type="button"
              >
                <span
                  class="cds--table-sort__flex"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Actions
                  </div>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon-unsorted"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                    />
                    <path
                      d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                    />
                  </svg>
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </span>
              </button>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr
            class=""
            tabindex="0"
            title=""
          >
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource name"
                >
                  resource name
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource label"
                >
                  resource label
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="category"
                >
                  category
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <button
                  aria-describedby="danger-description-15"
                  class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--danger"
                  tabindex="0"
                  title="Click to delete this mapping"
                  type="button"
                >
                  <span
                    class="cds--visually-hidden"
                    id="danger-description-15"
                  >
                    danger
                  </span>
                  <span
                    class="cds--front-line"
                    title="Click to delete this mapping"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class=""
            tabindex="1"
            title=""
          >
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource name"
                >
                  resource name
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource label"
                >
                  resource label
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="category"
                >
                  category
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <button
                  aria-describedby="danger-description-16"
                  class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--danger"
                  tabindex="0"
                  title="Click to delete this mapping"
                  type="button"
                >
                  <span
                    class="cds--visually-hidden"
                    id="danger-description-16"
                  >
                    danger
                  </span>
                  <span
                    class="cds--front-line"
                    title="Click to delete this mapping"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class=""
            tabindex="2"
            title=""
          >
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource name"
                >
                  resource name
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource label"
                >
                  resource label
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="category"
                >
                  category
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <button
                  aria-describedby="danger-description-17"
                  class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--danger"
                  tabindex="0"
                  title="Click to delete this mapping"
                  type="button"
                >
                  <span
                    class="cds--visually-hidden"
                    id="danger-description-17"
                  >
                    danger
                  </span>
                  <span
                    class="cds--front-line"
                    title="Click to delete this mapping"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class=""
            tabindex="3"
            title=""
          >
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource name"
                >
                  resource name
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource label"
                >
                  resource label
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="category"
                >
                  category
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <button
                  aria-describedby="danger-description-18"
                  class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--danger"
                  tabindex="0"
                  title="Click to delete this mapping"
                  type="button"
                >
                  <span
                    class="cds--visually-hidden"
                    id="danger-description-18"
                  >
                    danger
                  </span>
                  <span
                    class="cds--front-line"
                    title="Click to delete this mapping"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`SettingsLabelTagMapping component should render a SettingsLabelTagMapping component without warning 1`] = `
<div>
  <div
    class="miq-custom-tab-content-header"
  >
    <div
      class="tab-content-header-title"
    >
      <h3>
        Map Tags
      </h3>
    </div>
    <div
      class="tab-content-header-actions"
    >
      <button
        class="cds--btn cds--btn--primary"
        title="Click on this row to create a new mapping rule"
        type="button"
      >
        Add Mapping Rule
      </button>
    </div>
  </div>
  <div
    class="miq-data-table settings-label-tag-mappings-list"
  >
    <div
      class="cds--data-table-content"
    >
      <table
        class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
      >
        <thead>
          <tr>
            <th
              aria-sort="none"
              class="miq-data-table-header cds--table-sort__header"
              scope="col"
            >
              <div
                class="cds--table-sort__description"
                id="table-sort-2"
              >
                Click to sort rows by Resource Entity header in ascending order
              </div>
              <button
                aria-describedby="table-sort-2"
                class="miq-data-table-header cds--table-sort"
                type="button"
              >
                <span
                  class="cds--table-sort__flex"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Resource Entity
                  </div>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon-unsorted"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                    />
                    <path
                      d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                    />
                  </svg>
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="miq-data-table-header cds--table-sort__header"
              scope="col"
            >
              <div
                class="cds--table-sort__description"
                id="table-sort-3"
              >
                Click to sort rows by Resource Label header in ascending order
              </div>
              <button
                aria-describedby="table-sort-3"
                class="miq-data-table-header cds--table-sort"
                type="button"
              >
                <span
                  class="cds--table-sort__flex"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Resource Label
                  </div>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon-unsorted"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                    />
                    <path
                      d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                    />
                  </svg>
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="miq-data-table-header cds--table-sort__header"
              scope="col"
            >
              <div
                class="cds--table-sort__description"
                id="table-sort-4"
              >
                Click to sort rows by Tag Category header in ascending order
              </div>
              <button
                aria-describedby="table-sort-4"
                class="miq-data-table-header cds--table-sort"
                type="button"
              >
                <span
                  class="cds--table-sort__flex"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Tag Category
                  </div>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon-unsorted"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                    />
                    <path
                      d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                    />
                  </svg>
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="miq-data-table-header cds--table-sort__header"
              scope="col"
            >
              <div
                class="cds--table-sort__description"
                id="table-sort-5"
              >
                Click to sort rows by Actions header in ascending order
              </div>
              <button
                aria-describedby="table-sort-5"
                class="miq-data-table-header cds--table-sort"
                type="button"
              >
                <span
                  class="cds--table-sort__flex"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Actions
                  </div>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="cds--table-sort__icon-unsorted"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                    />
                    <path
                      d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                    />
                  </svg>
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </span>
              </button>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr
            class=""
            tabindex="0"
            title=""
          >
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource name"
                >
                  resource name
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource label"
                >
                  resource label
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="category"
                >
                  category
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <button
                  aria-describedby="danger-description-6"
                  class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--danger"
                  tabindex="0"
                  title="Click to delete this mapping"
                  type="button"
                >
                  <span
                    class="cds--visually-hidden"
                    id="danger-description-6"
                  >
                    danger
                  </span>
                  <span
                    class="cds--front-line"
                    title="Click to delete this mapping"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class=""
            tabindex="1"
            title=""
          >
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource name"
                >
                  resource name
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource label"
                >
                  resource label
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="category"
                >
                  category
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <button
                  aria-describedby="danger-description-7"
                  class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--danger"
                  tabindex="0"
                  title="Click to delete this mapping"
                  type="button"
                >
                  <span
                    class="cds--visually-hidden"
                    id="danger-description-7"
                  >
                    danger
                  </span>
                  <span
                    class="cds--front-line"
                    title="Click to delete this mapping"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class=""
            tabindex="2"
            title=""
          >
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource name"
                >
                  resource name
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource label"
                >
                  resource label
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="category"
                >
                  category
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <button
                  aria-describedby="danger-description-8"
                  class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--danger"
                  tabindex="0"
                  title="Click to delete this mapping"
                  type="button"
                >
                  <span
                    class="cds--visually-hidden"
                    id="danger-description-8"
                  >
                    danger
                  </span>
                  <span
                    class="cds--front-line"
                    title="Click to delete this mapping"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class=""
            tabindex="3"
            title=""
          >
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource name"
                >
                  resource name
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="resource label"
                >
                  resource label
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <span
                  class="cds--front-line"
                  title="category"
                >
                  category
                </span>
              </div>
            </td>
            <td>
              <div
                class="cell"
              >
                <button
                  aria-describedby="danger-description-9"
                  class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--danger"
                  tabindex="0"
                  title="Click to delete this mapping"
                  type="button"
                >
                  <span
                    class="cds--visually-hidden"
                    id="danger-description-9"
                  >
                    danger
                  </span>
                  <span
                    class="cds--front-line"
                    title="Click to delete this mapping"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
